--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 		"width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="web/general/general.css"> 
     <link rel="stylesheet" type="text/css" href="web/index.css"> 
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
  
     <title>Cris Rossi, Ph.D. (they/them)</title> 
 </head> 
 
  <body>	
     <script src="web/general/general.js"></script>
-    <script src="web/index.js"></script> 
+    <script src="web/index.js"></script>  
 </body>
 		
 </html>  
 
-  <!--  &nbsp; such as &thinsp;, &ensp;,and &emsp;.-->
+  <!--  &nbsp; such as &thinsp;, &ensp;,and &emsp;.
+
+-  –  — -->
